--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -27,7 +27,7 @@ task dist(type: Jar) {
     from files(sourceSets.main.output.classesDir)
     from files(sourceSets.main.output.resourcesDir)
     from {configurations.compile.collect {zipTree(it)}}
-    from files(project.assetsDir);
+    from files(project.ext.assetsDir)
  
     manifest {
         attributes 'Main-Class': project.mainClassName
